added flex boxes for main content sections

--- a/index.html
+++ b/index.html
@@ -30,17 +30,32 @@
     </div>
 </header>
 
-    <main>
+<main>
+    <div class="main-container">
+        <div class="container">
+            <h2>about me</h2>
+            <h2>my work</h2>
+            <h2>get in touch!</h2>
+        </div>
+        <div class="content-container">
         <section class="about-me">
-            <!-- About Me Section w/ text and picture of me -->
+            <p>this is where about me text will go</p>
+            <!-- About Me section w. text about me -->
         </section>
         <section class="my-work">
+            <div class="first-image"></div><a href="#"><img src="imgurl" alt="alt text"></a></div>
+            <a href="#"><img src="imgurl" alt="alt text"></a>
+            <a href="#"><img src="imgurl" alt="alt text"></a>
+            <a href="#"><img src="imgurl" alt="alt text"></a>
             <!-- My Work section with stock images that will link to live applications when I have them -->
         </section>
         <section class="contact">
+            <p>this is where contact me links will go</p>
             <!-- Contact me section with how to contact me and form? -->
         </section>
-    </main>
+        </div>
+    </div>
+</main>
 
     <footer class="footer">
         <!-- Add footer text -->
