added placeholder images and flexbox around them

--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
             <!-- About Me section w. text about me -->
         </section>
         <section class="my-work">
-            <div class="first-image"></div><a href="#"><img src="imgurl" alt="alt text"></a></div>
-            <a href="#"><img src="imgurl" alt="alt text"></a>
-            <a href="#"><img src="imgurl" alt="alt text"></a>
-            <a href="#"><img src="imgurl" alt="alt text"></a>
-            <!-- My Work section with stock images that will link to live applications when I have them -->
+            <div class="my-work-images">
+                <div class="first-image"><a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a></div>
+                <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
+                <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
+                <!-- <br> -->
+                <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
+                <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
+            </div>
         </section>
         <section class="contact">
             <p>this is where contact me links will go</p>
