trying to fix flexbox layout

--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
         </section>
         <section class="my-work">
             <div class="my-work-images">
-                <div class="first-image"><a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a></div>
-                <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
-                <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
+                <div><a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a></div>
+                
+                <div><a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a></div>
+                <div><a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a></div>
                 <!-- <br> -->
-                <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
-                <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
+                <div><a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a></div>
+                <div><a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a></div>
+                 
             </div>
         </section>
         <section class="contact">
