changed flexbox structure in HTML

--- a/index.html
+++ b/index.html
@@ -34,32 +34,22 @@
     <div class="main-container">
         <div class="container">
             <h2>about me</h2>
-            <h2>my work</h2>
-            <h2>get in touch!</h2>
-        </div>
-        <div class="content-container">
-        <section class="about-me">
             <p>this is where about me text will go</p>
-            <!-- About Me section w. text about me -->
-        </section>
-        <section class="my-work">
-            <div class="my-work-images">
-                <div><a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a></div>
-                
-                <div><a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a></div>
-                <div><a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a></div>
-                <!-- <br> -->
-                <div><a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a></div>
-                <div><a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a></div>
-                 
-            </div>
-        </section>
-        <section class="contact">
-            <p>this is where contact me links will go</p>
-            <!-- Contact me section with how to contact me and form? -->
-        </section>
         </div>
-    </div>
+        <div class="container">
+            <h2>my work</h2>
+            <div>
+                <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
+                <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
+                <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
+                <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
+                <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
+            </div>
+        </div>
+        <div class="container">
+            <h2>get in touch</h2>
+            <p>this is where about me text will go</p>
+        </div>
 </main>
 
     <footer class="footer">
