--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
     <header>
         <div class="header">
-        <img src="assets/images/background-header.jpeg" style="width:100%;">
-        <!-- Add background image to header -->
+            <br>
         <h1 class="header-text">Randi's Portfolio</h1>
+        <p>subtitle here</p>
         
         <!-- Add subheader -->
         <nav class="navigation">
             <!-- Style Nav to be inline, flex-end/right-aligned -->
             <ul>
             <!-- Use # links to scroll down on page when clicked -->
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">My Work</a></li>
+                <li><a href="#">About Me</a></li><br>
+                <li><a href="#">My Work</a></li><br>
                 <li><a href="#">Contact Me</a></li>
             </ul>
         </nav>
@@ -53,7 +53,7 @@
 </main>
 
     <footer class="footer">
-        <!-- Add footer text -->
+        <p>footer text here</p>
     </footer>
 
 
