added image of me, added borders around images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             <br>
         <h1 class="header-text">Randi's Portfolio</h1>
         <p>subtitle here</p>
-        
+        <div class="header-image">
+            <img src="assets/images/me.JPG" width="175px" height="250px">
+        </div>
+        <br><br><br><br>
         <!-- Add subheader -->
         <nav class="navigation">
             <!-- Style Nav to be inline, flex-end/right-aligned -->
