--- a/index.html
+++ b/index.html
@@ -41,10 +41,8 @@
         </div>
         <div class="container">
             <h2>my work</h2>
-            <div>
-                <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
-                <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
-                <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
+            <div class="my-work-images">
+                <div id="first-image"><a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a></div>
                 <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
                 <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
             </div>
