fixed image flexbox to make featured image, added titles to image

--- a/index.html
+++ b/index.html
@@ -41,18 +41,28 @@
         </div>
         <div class="container">
             <h2>my work</h2>
-            <div class="my-work-images">
-                <div id="first-image"><a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a></div>
-                <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
-                <a href="#"><img src="assets/images/myworkimage.jpeg" alt="alt text"></a>
+            <div class="images-box">
+                <div class="first-image">
+                    <div class="image-title">hello</div>
+                        <a href="#"><img src="assets/images/featured-image.png" alt="alt text"></a>
+                </div>
+                <div class="other-image">
+                    <div class="image-title">hello</div>
+                        <a href="#"><img src="assets/images/image2.png" alt="alt text"></a>
+                </div>
+                <div class="other-image">
+                    <div class="image-title">hello</div>
+                        <a href="#"><img src="assets/images/image3.png" alt="alt text"></a>
+                </div>
             </div>
         </div>
         <div class="container">
             <h2>get in touch</h2>
             <p>this is where about me text will go</p>
         </div>
-        <br>
-        <br>
+        <br><br>
+
+    </div>
 </main>
 
     <footer class="footer">
