updated header tags

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="header">
             <br>
         <h1 class="header-text">Randi's Portfolio</h1>
-        <p>subtitle here</p>
+        <h2>subtitle here</h2>
         <div class="header-image">
             <img src="assets/images/me.JPG" width="175px" height="250px">
         </div>
@@ -36,11 +36,11 @@
 <main>
     <div class="main-container">
         <div class="container">
-            <h2>about me</h2>
+            <h3>about me</h2>
             <p>this is where about me text will go</p>
         </div>
         <div class="container">
-            <h2>my work</h2>
+            <h3>my work</h2>
             <div class="images-box">
                 <div class="first-image">
                     <div class="image-title">hello</div>
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="container">
-            <h2>get in touch</h2>
+            <h3>get in touch</h2>
             <p>this is where about me text will go</p>
         </div>
         <br><br>
