added contact links and emojis, formatted contact ul

--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
         </div>
         <div class="container">
             <h3>get in touch</h2>
-            <p>this is where about me text will go</p>
+                <ul>
+                    <li class="contact-me-links" id="email"><a href="mailto:randibrown21@gmail.com">email</a></li>
+                    <li class="contact-me-links" id="linkedin"><a href="https://www.linkedin.com/in/randi-brown-03b5aa85/">linkedin</a></li>
+                    <li class="contact-me-links" id="github"><a href="https://github.com/randirose">GitHub</a></li>
+                </ul>
         </div>
         <br><br>
 
