added ids for header links to scroll to that section, added semantic html tags to sections

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <!-- Style Nav to be inline, flex-end/right-aligned -->
             <ul>
             <!-- Use # links to scroll down on page when clicked -->
-                <li><a href="#">About Me</a></li><br>
-                <li><a href="#">My Work</a></li><br>
-                <li><a href="#">Contact Me</a></li>
+                <li><a href="#about-me">about me</a></li><br>
+                <li><a href="#my-work">my work</a></li><br>
+                <li><a href="#get-in-touch">get in touch</a></li>
             </ul>
         </nav>
     </div>
@@ -35,12 +35,12 @@
 
 <main>
     <div class="main-container">
-        <div class="container">
-            <h3>about me</h2>
+        <section class="container" id="about-me">
+            <h3>about me</h3>
             <p>this is where about me text will go</p>
-        </div>
-        <div class="container">
-            <h3>my work</h2>
+        </section>
+        <section class="container" id="my-work">
+            <h3>my work</h3>
             <div class="images-box">
                 <div class="first-image">
                     <div class="image-title">hello</div>
@@ -55,15 +55,15 @@
                         <a href="#"><img src="assets/images/image3.png" alt="alt text"></a>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <h3>get in touch</h2>
+        </section>
+        <section class="container" id="get-in-touch">
+            <h3>get in touch</h3>
                 <ul>
-                    <li class="contact-me-links" id="email"><a href="mailto:randibrown21@gmail.com">email</a></li>
-                    <li class="contact-me-links" id="linkedin"><a href="https://www.linkedin.com/in/randi-brown-03b5aa85/">linkedin</a></li>
-                    <li class="contact-me-links" id="github"><a href="https://github.com/randirose">GitHub</a></li>
+                    <li class="contact-me-links" id="email"><a href="mailto:randibrown21@gmail.com" target=”_blank”>email</a></li>
+                    <li class="contact-me-links" id="linkedin"><a href="https://www.linkedin.com/in/randi-brown-03b5aa85/" target=”_blank”>linkedin</a></li>
+                    <li class="contact-me-links" id="github"><a href="https://github.com/randirose" target=”_blank”>GitHub</a></li>
                 </ul>
-        </div>
+        </section>
         <br><br>
 
     </div>
