--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
             <h3>my work</h3>
             <div class="images-box">
                 <div class="first-image">
-                    <div class="image-title">hello</div>
+                    <div class="image-title">featured application</div>
                         <a href="#"><img src="assets/images/featured-image.png" alt="alt text"></a>
                 </div>
                 <div class="other-image">
-                    <div class="image-title">hello</div>
+                    <div class="image-title">second application</div>
                         <a href="#"><img src="assets/images/image2.png" alt="alt text"></a>
                 </div>
                 <div class="other-image">
-                    <div class="image-title">hello</div>
+                    <div class="image-title">third application</div>
                         <a href="#"><img src="assets/images/image3.png" alt="alt text"></a>
                 </div>
             </div>
