added about me content and subtitle

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header>
         <div class="header">
             <br>
-        <h1 class="header-text">Randi's Portfolio</h1>
-        <h2>subtitle here</h2>
+        <h1 class="header-text">Randi's portfolio</h1>
+        <h2>Get to know me, my work, and more!</h2>
         <div class="header-image">
             <img src="assets/images/me.JPG" width="175px" height="250px">
         </div>
@@ -37,7 +37,8 @@
     <div class="main-container">
         <section class="container" id="about-me">
             <h3>about me</h3>
-            <p>this is where about me text will go</p>
+            <p>Hi there! My name is Randi and I'm an aspiring web developer. I attended the University of Oregon (go Ducks!) and graduated with a Journalism degree and a minor in Spanish. After college, I worked in policy communication in DC, where I worked on the digital communications team at a think tank. That is where I fell in love with coding!<br><br>Beyond my work experience, I love to travel. My partner and I (and our two adorable cats) recently travelled across the U.S., visiting many National Parks along the way, in our converted camper van!<br><br>Please check out the applications I've developed below, and feel free to reach out at the links below!</p>
+            </p>
         </section>
         <section class="container" id="my-work">
             <h3>my work</h3>
@@ -70,7 +71,7 @@
 </main>
 
     <footer class="footer">
-        <p>footer text here</p>
+        <p>thanks for visiting!</p>
     </footer>
 
 
