edited about me section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="main-container">
         <section class="container" id="about-me">
             <h3>about me</h3>
-            <p>Hi there! My name is Randi and I'm an aspiring web developer. I attended the University of Oregon (go Ducks!) and graduated with a Journalism degree and a minor in Spanish. After college, I worked in policy communication in DC, where I worked on the digital communications team at a think tank. That is where I fell in love with coding!<br><br>Beyond my work experience, I love to travel. My partner and I (and our two adorable cats) recently travelled across the U.S., visiting many National Parks along the way, in our converted camper van!<br><br>Please check out the applications I've developed below, and feel free to reach out at the links below!</p>
+            <p>Hi there! My name is Randi and I'm an aspiring web developer. I attended the University of Oregon (go Ducks!) and graduated with a Journalism degree and a minor in Spanish. After college, I worked in policy communication in DC, where I worked on the digital communications team at a think tank. That is where I fell in love with coding!<br><br>Beyond my work experience, I love to travel. My partner and I (and our two adorable cats) recently travelled across the U.S., visiting many National Parks along the way, in our converted camper van!<br><br>Please check out the applications I've developed in the 'my work' section, and feel free to reach out at the links below!
             </p>
         </section>
         <section class="container" id="my-work">
