reformatted header links and contact links

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <!-- Style Nav to be inline, flex-end/right-aligned -->
             <ul>
             <!-- Use # links to scroll down on page when clicked -->
-                <li><a href="#about-me">about me</a></li><br>
-                <li><a href="#my-work">my work</a></li><br>
-                <li><a href="#get-in-touch">get in touch</a></li>
+                <li class="nav-links"><a href="#about-me">about me</a></li><br>
+                <li class="nav-links"><a href="#my-work">my work</a></li><br>
+                <li class="nav-links"><a href="#get-in-touch">get in touch</a></li>
             </ul>
         </nav>
     </div>
