added media queries for two different size devices

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             <div class="images-box">
                 <div class="first-image">
                     <div class="image-title">featured application</div>
-                        <a href="#"><img src="assets/images/featured-image.png" alt="alt text"></a>
+                        <a href="#"><img src="assets/images/featured-image.png" class="featured-image1" alt="alt text"></a>
+                        <a href="#"><img src="assets/images/featured-image2.png" class="featured-image2" alt="alt text"></a>
                 </div>
                 <div class="other-image">
                     <div class="image-title">second application</div>
