cleaned up code, added comments for organization

--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
             <img src="assets/images/me.JPG" width="175px" height="250px">
         </div>
         <br><br><br><br>
-        <!-- Add subheader -->
         <nav class="navigation">
-            <!-- Style Nav to be inline, flex-end/right-aligned -->
             <ul>
             <!-- Use # links to scroll down on page when clicked -->
-                <li class="nav-links"><a href="#about-me">about me</a></li><br>
-                <li class="nav-links"><a href="#my-work">my work</a></li><br>
-                <li class="nav-links"><a href="#get-in-touch">get in touch</a></li>
+                <li><a href="#about-me">about me</a></li><br>
+                <li><a href="#my-work">my work</a></li><br>
+                <li><a href="#get-in-touch">get in touch</a></li>
             </ul>
         </nav>
     </div>
@@ -46,6 +44,7 @@
                 <div class="first-image">
                     <div class="image-title">featured application</div>
                         <a href="#"><img src="assets/images/featured-image.png" class="featured-image1" alt="alt text"></a>
+                        <!-- featured image2 used for media queries to match size of other two images on smaller screens -->
                         <a href="#"><img src="assets/images/featured-image2.png" class="featured-image2" alt="alt text"></a>
                 </div>
                 <div class="other-image">
@@ -61,6 +60,7 @@
         <section class="container" id="get-in-touch">
             <h3>get in touch</h3>
                 <ul>
+                    <!-- contact links open in new tab -->
                     <li class="contact-me-links" id="email"><a href="mailto:randibrown21@gmail.com" target=”_blank”>email</a></li>
                     <li class="contact-me-links" id="linkedin"><a href="https://www.linkedin.com/in/randi-brown-03b5aa85/" target=”_blank”>linkedin</a></li>
                     <li class="contact-me-links" id="github"><a href="https://github.com/randirose" target=”_blank”>GitHub</a></li>
