cleaned up code more

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <img src="assets/images/me.JPG" width="175px" height="250px">
         </div>
         <br><br><br><br>
-        <nav class="navigation">
-            <ul>
+        <nav>
+            <ul class="navigation">
             <!-- Use # links to scroll down on page when clicked -->
                 <li><a href="#about-me">about me</a></li><br>
                 <li><a href="#my-work">my work</a></li><br>
