added alt tags to images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1 class="header-text">Randi's portfolio</h1>
         <h2>Get to know me, my work, and more!</h2>
         <div class="header-image">
-            <img src="assets/images/me.JPG" width="175px" height="250px">
+            <img src="assets/images/me.JPG" alt="A photo of me at Grand Teton National Park" width="175px" height="250px">
         </div>
         <br><br><br><br>
         <nav>
@@ -43,17 +43,17 @@
             <div class="images-box">
                 <div class="first-image">
                     <div class="image-title">featured application</div>
-                        <a href="#"><img src="assets/images/featured-image.png" class="featured-image1" alt="alt text"></a>
+                        <a href="#"><img src="assets/images/featured-image.png" class="featured-image1" alt="Featured Placeholder image - large"></a>
                         <!-- featured image2 used for media queries to match size of other two images on smaller screens -->
-                        <a href="#"><img src="assets/images/featured-image2.png" class="featured-image2" alt="alt text"></a>
+                        <a href="#"><img src="assets/images/featured-image2.png" class="featured-image2" alt="Featured placeholder image - for smaller screens"></a>
                 </div>
                 <div class="other-image">
                     <div class="image-title">second application</div>
-                        <a href="#"><img src="assets/images/image2.png" alt="alt text"></a>
+                        <a href="#"><img src="assets/images/image2.png" alt="Second placeholder image"></a>
                 </div>
                 <div class="other-image">
                     <div class="image-title">third application</div>
-                        <a href="#"><img src="assets/images/image3.png" alt="alt text"></a>
+                        <a href="#"><img src="assets/images/image3.png" alt="Third placeholder image"></a>
                 </div>
             </div>
         </section>
