added updated images and links to first group project to featured image section

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <h3>my work</h3>
             <div class="images-box">
                 <div class="first-image">
-                    <div class="image-title">featured application</div>
-                        <a href="#"><img src="assets/images/featured-image.png" class="featured-image1" alt="Featured Placeholder image - large"></a>
+                    <div class="image-title">International Traveller Web App</div>
+                        <a href="https://efogerson1.github.io/group-proj-1" target="_blank"><img src="assets/images/main_image1.png" class="featured-image1" alt="Featured image: International Travel Planner web app - large"></a>
                         <!-- featured image2 used for media queries to match size of other two images on smaller screens -->
-                        <a href="#"><img src="assets/images/featured-image2.png" class="featured-image2" alt="Featured placeholder image - for smaller screens"></a>
+                        <a href="https://efogerson1.github.io/group-proj-1" target="_blank"><img src="assets/images/main_image2.png" class="featured-image2" alt="Featured image: International Travel Planner web app - for smaller screens"></a>
                 </div>
                 <div class="other-image">
                     <div class="image-title">second application</div>
