added second project link and image

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                         <a href="https://efogerson1.github.io/group-proj-1" target="_blank"><img src="assets/images/main_image2.png" class="featured-image2" alt="Featured image: International Travel Planner web app - for smaller screens"></a>
                 </div>
                 <div class="other-image">
-                    <div class="image-title">second application</div>
-                        <a href="#"><img src="assets/images/image2.png" alt="Second placeholder image"></a>
+                    <div class="image-title">Education Tech Manager</div>
+                        <a href="https://group-proj-2-edc9addaf351.herokuapp.com/"><img src="assets/images/image2.png" alt="Ed Tech App"></a>
                 </div>
                 <div class="other-image">
                     <div class="image-title">third application</div>
