--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="other-image">
                     <div class="image-title">Education Tech Manager</div>
-                        <a href="https://group-proj-2-edc9addaf351.herokuapp.com/"><img src="assets/images/image2.png" alt="Ed Tech App"></a>
+                        <a href="https://group-proj-2-edc9addaf351.herokuapp.com/" target="_blank"><img src="assets/images/image2.png" alt="Ed Tech App"></a>
                 </div>
                 <div class="other-image">
                     <div class="image-title">third application</div>
